# ssh-honeypot

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE.MIT  README.md  config.toml.example  dashboard.toml.example  docker-compose.yml
.github/workflows/: docker-build.yml
common/: Cargo.toml
common/migrations/: 002_conn_track.sql  004_auth_enriched_view.sql  005_auth_enriched_password_only.sql  010_live_sessions.sql  011_auth_username_index.sql  012_listen_notify.sql
common/src/: dashboard.rs  db.rs  lib.rs  report.rs
common/templates/: ip_report.txt
desktop/: Cargo.toml
desktop/src/: whois.rs
migrations/: 001_initial_schema.sql  003_ipapi_cache.sql  006_auth_ip_intelligence.sql  007_add_indicies.sql  008_add_contrack_port.sql  009_timestamp_desc_enriched.sql  013_reported_ips.sql
postgres-init/: 001_create_extensions.sql
shell/: Cargo.toml
shell/src/: filters.rs  lib.rs  parser.rs
shell/src/commands/: builtin_commands.rs  cat_command.rs  command_trait.rs  context.rs  date.rs  dispatcher.rs  ls_command.rs  registry.rs  test_command.rs  uname_command.rs
shell/src/filesystem/: fs2.rs  mod.rs
src/: abuseipdb.rs  app.rs  dashboard.rs  dashboard_config.rs  db.rs  ipapi.rs  keys.rs  lib.rs  main.rs  paths.rs  report.rs  server.rs  sftp.rs
src/shell/: cat.rs  filesystem.rs  filters.rs  mod.rs  parser.rs
src/shell/commands/: builtin_commands.rs  cat.rs  cat_command.rs  command_trait.rs  context.rs  date_command.rs  dispatcher.rs  echo.rs  echo_command.rs  free.rs  free_command.rs  ls.rs  ls_command.rs  mod.rs  ps.rs  ps_command.rs  registry.rs  test_command.rs  uname.rs  uname_command.rs
src/shell/filesystem/: filesystem.rs  fs2.rs  mod.rs
templates/: ip_report.html  ip_report.md  ip_report.txt  password_report.html  password_report.md  password_report.txt
