[package]
name = "ssh-honeypot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Lucy-dot-dot/ssh-honeypot.git"
license = "MIT"
readme = "README.md"

[[bin]]
name = "ssh-honeypot"
path = "src/main.rs"

[[bin]]
name = "report-generator"
path = "src/bin/report_generator.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
russh = "0.57.0"
log = "0.4.29"
env_logger = "0.11.8"
async-trait = "0.1.89"
rand_core = { version =  "0.9.3", features = ["std"]  }
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
clap = { version =  "4.5.54", features = ["derive", "env", "usage", "suggestions", "color"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"
directories = "6.0.0"
flate2 = "1.1.5"
tar = "0.4.44"
rand = "0.9.2"
russh-sftp = "2.1"
sha2 = "0.10"
infer = "0.19.0"
reqwest = { version = "0.13.1", features = ["brotli", "deflate", "json", "query"] }
webpki-root-certs = "1.0.5"
serde_json = "1.0.149"
ssh-encoding = "0.2.0"

[profile.release]
lto = true
strip = true
