[package]
name = "ssh-honeypot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Lucy-dot-dot/ssh-honeypot.git"
license = "MIT"
readme = "README.md"

[[bin]]
name = "ssh-honeypot"
path = "src/main.rs"

[[bin]]
name = "report-generator"
path = "src/bin/report_generator.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
russh = "0.61.1"
log = "0.4.32"
env_logger = "0.11.10"
async-trait = "0.1.89"
chrono = "0.4.5"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
clap = { version =  "4.6.1", features = ["derive", "env", "usage", "suggestions", "color"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
directories = "6.0.0"
flate2 = "1.1.9"
tar = "0.4.46"
rand = "0.10.1"
russh-sftp = "2.3.0"
hex = "0.4.3"
sha2 = "0.11.0"
infer = "0.19.0"
reqwest = { version = "0.13.4", features = ["brotli", "deflate", "json", "query"] }
webpki-root-certs = "1.0.7"
serde_json = "1.0.150"
ssh-encoding = "0.3.0-rc.9"

[profile.release]
lto = true
strip = true
