[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.52.3", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
minijinja = "2.21.0"
directories = "6.0.0"
toml = "1.1.2"
log = "0.4.33"
