[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh-honeypot = { path = ".." }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.35.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.45"
log = "0.4.33"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35.0", features = ["x11", "wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.1"
image = { version = "0.25.10", default-features = false, features = ["bmp"] }
